fix letter spacing

--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -37,7 +37,6 @@ body {
   display: inline-block;
   transform: rotate(180deg);
   position: absolute;
-  left: 3em;
   bottom: -0.13em;
   transition: transform 0.5s, left 0.5s, bottom 0.5s;
 }
@@ -50,14 +49,13 @@ body {
 #logo #me {
   display: inline-block;
   position: absolute;
-  left: 3.38em;
+  left: 3.3em;
   transition: transform 0.5s, left 0.5s, opacity 0.5s;
 }
 
 #logo:hover #i {
   transform: rotate(0deg);
   bottom: 0em;
-  left: 2.974em;
   transition: transform 0.5s, left 0.5s, bottom 0.5s;
 }
 #logo:hover #me {
